@@ -1,0 +1,4 @@
+The creation of argument lists for closures is sped up by avoiding an
+unnecessary allocation of a CONS cell, in the same way as was done in
+my Sep 2010 patch for evalList, which was incorporated into 2.12.0 and
+later versions of R.  Also, now uses cons_with_tag in all these routines.
